--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="manifest" href="/manifest.json" />
-    <meta name="theme-color" content="#ffcb05" />
+    <meta name="theme-color" content="#d10000" />
 
     <title>Vite + React</title>
   </head>
